--- a/client/style.css
+++ b/client/style.css
@@ -3,16 +3,16 @@
 */
 
 body,html {
-	background-color: #353544;
+	background-color: #000;
 	width: 100%;
 	height: 100%;
 	margin: 0 auto;
 	font-family: Arial, sans-serif;
-	color: #ffffff;
+	color: #0f0;
 }
 
 .blue {
-	color: #00aeff;
+	color: #0f0;
 }
 
 a {
@@ -52,8 +52,9 @@ input[type="submit"]:focus, input[type="submit"]:hover {
 }
 
 textarea, option, select, input {
-	background-color: #353544;
-	color: #ffffff;
+	background-color: #000;
+	border-color: #0f0;
+	color: #0f0;
 }
 
 footer {
@@ -94,7 +95,7 @@ textarea{
 
 
 b {
-	color: #00aeff;
+	color: #0f0;
 }
 
 table {
